updated room-reservation-app